Improve bandwith by not forcing clients to fetch lessons body unless specified
